--- a/andflare/css/main.css
+++ b/andflare/css/main.css
@@ -8,7 +8,7 @@
   align-content: center;
   justify-content: center;
   align-items: center;
-  min-height: 800px;
+  min-height: 600px;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -272,5 +272,8 @@
     flex: 1;
     text-align: center;
     padding: 11px 0px;
+  }
+  .font-page-content h1 {
+    font-size: 24px;
   }
 }
