--- a/andflare/css/main.css
+++ b/andflare/css/main.css
@@ -264,14 +264,14 @@
   text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.42);
   text-align: center;
   position: relative;
-  z-index:1000;
+  z-index: 1000;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.trending-title img{
-    margin-right: 5px;
-    width: 20px;
+.trending-title img {
+  margin-right: 5px;
+  width: 20px;
 }
 .trending-slide {
   width: 90%;
@@ -387,12 +387,27 @@
   }
 }
 @media only screen and (max-width: 768px) {
+  .front-page {
+    display: block;
+    padding: 0;
+  }
+  .font-page-content {
+    width: 100%;
+    display: block;
+    padding-left: 15px;
+    padding-right: 15px;
+    position: relative;
+  }
   .search-form .from-group {
     width: 100%;
     margin-bottom: 15px;
   }
   .front-navigation {
     display: block;
+    position: relative;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-bottom: 43px;
   }
   .front-navigation .nav-items a {
     flex: 1;
@@ -401,5 +416,11 @@
   }
   .font-page-content h1 {
     font-size: 24px;
+  }
+  .down-stripe{
+    margin-top: 30px;
+    position: relative;
+    display: block;
+    width: 100%;
   }
 }
