--- a/andflare/css/main.css
+++ b/andflare/css/main.css
@@ -43,10 +43,10 @@ html {
   text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.42);
   z-index: 10;
 }
-.relative.down-stripe{
-position: relative;
-width: 100%;
-display: block;
+.relative.down-stripe {
+  position: relative;
+  width: 100%;
+  display: block;
 }
 .down-stripe:hover {
   text-decoration: none;
@@ -646,7 +646,7 @@ a:focus {
   padding: 12px;
 }
 
-.modal-footer .tooltip-static {
+.tooltip-static {
   background: #7360e0;
   color: white;
   position: absolute;
@@ -661,7 +661,7 @@ a:focus {
   border-radius: 7px;
   margin: 0 auto;
 }
-.modal-footer .tooltip-static::before {
+.tooltip-static::before {
   content: "";
   position: absolute;
   left: 100%;
@@ -745,20 +745,20 @@ body {
   background: none;
 }
 
-.main-page .trending-slide{
-width: 100%;
-margin: 0;
+.main-page .trending-slide {
+  width: 100%;
+  margin: 0;
 }
-.main-page .paginator-center .next{
+.main-page .paginator-center .next {
   right: 10px;
 }
-.main-page .paginator-center .prev{
+.main-page .paginator-center .prev {
   left: 10px;
 }
-.sort-nav{
+.sort-nav {
   color: #7e8183;
-    text-align: center;
-    margin: 25px 10px;
+  text-align: center;
+  margin: 25px 10px;
 }
 .sort-nav a {
   color: #7e8183;
@@ -768,18 +768,17 @@ margin: 0;
   font-size: 17px;
   display: inline-block;
 }
-.sort-nav a:hover{
+.sort-nav a:hover {
   background: #ededed;
   text-decoration: none;
   color: #7e8183;
 }
-.sort-nav a.active{
+.sort-nav a.active {
   color: #0279d2;
 }
 
-
 .grid-cards .grid-card {
-width: 375px;
+  width: 375px;
 
   background-color: #e9e9e9;
 
@@ -791,55 +790,90 @@ width: 375px;
   padding-bottom: 10px;
 }
 
-.grid-cards .grid-card img{
-width: 100%;
+.grid-cards .grid-card img {
+  width: 100%;
 }
 .card-head {
-padding: 12px;
+  padding: 12px;
 }
-.card-head .profile-image{
+.card-head .profile-image {
   width: 35px !important;
   border-radius: 5px;
 }
-.card-head span{
+.card-head span {
   font-weight: bold;
   color: black;
   margin-left: 5px;
 }
 
-
-
-.card-head .dropdown{
+.card-head .dropdown {
   display: inline-block;
   float: right;
   background: none;
 }
 
-.card-head .dropdown button{
+.card-head .dropdown button {
   background: none;
   font-size: 29px;
   padding: 0;
   line-height: 28px;
 }
 
-.card-head .dropdown button:focus{
+.card-head .dropdown button:focus {
   outline: none;
- }
- .card-head .dropdown button:active{
+}
+.card-head .dropdown button:active {
   outline: none;
- }
+}
 
- .card-footer{
-   padding: 10px 20px;
- }
- .card-footer a{
+.card-footer {
+  padding: 10px 20px;
+}
+.card-footer a {
   color: #585858;
   font-size: 16px;
   font-weight: 500;
   margin-right: 6px;
- }
+}
 
+.search-banner .front-navigation {
+  position: relative;
+}
 
+.nav-menu {
+  width: 100%;
+  justify-content: right !important;
+}
+.notification {
+  margin-left: 15px;
+}
+.notification label {
+  background: #65ff39;
+  padding: 5px 8px;
+  border-radius: 3px;
+  font-weight: bold;
+  color: #4c1bed;
+}
+.notification .tooltip-static {
+  background: #fedd01;
+  color: #373c45;
+  font-weight: bold;
+  width: 150px;
+  position: relative;
+  margin-left: 20px;
+  top: 0;
+  border-radius: 4px;
+}
+.tooltip-static::before {
+  content: "";
+  position: absolute;
+  left: 100%;
+  margin-left: -169px;
+  transform: translateY(-50%);
+  border: 10px solid #fedd01;
+  border-color: transparent #fedd01 transparent transparent;
+  bottom: -4px;
+}
 @media only screen and (max-width: 1024px) {
   .search-form .from-group {
     width: 90%;
@@ -850,6 +884,9 @@ padding: 12px;
   }
 }
 @media only screen and (max-width: 768px) {
+  .main-page {
+    padding: 20px 20px;
+  }
   .paginator-center .next {
     right: -5px;
   }
