--- a/andflare/css/main.css
+++ b/andflare/css/main.css
@@ -904,7 +904,7 @@ body {
   background: #4e1bf4;
   left: 0;
   padding: 5px 94px;
-  z-index: 9999999;
+  z-index: 9999;
 }
 @media only screen and (max-width: 1024px) {
   .search-form .from-group {
