--- a/andflare/css/main.css
+++ b/andflare/css/main.css
@@ -19,7 +19,13 @@ html {
   flex-wrap: wrap;
   padding-bottom: 30px;
 }
-
+.front-page.scroll{
+  height: 100%;
+  padding-bottom: 80px;
+}
+.front-page.scroll .font-page-content{
+  padding-top: 40px;
+}
 .front-page::before {
   content: "";
   background: rgba(0, 0, 0, 0.5);
@@ -32,7 +38,7 @@ html {
 }
 .down-stripe {
   background: #09ce37;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   left: 0;
@@ -41,8 +47,13 @@ html {
   color: white;
   font-size: 18px;
   text-shadow: 0px ​1px 3px rgba(0, 0, 0, 0.42);
-  
-  z-index: 10;
+  z-index: 1000;
+  text-decoration: none;
+}
+.scroll .down-stripe {
+  position: absolute;
+  bottom: 0;
+
 }
 .relative.down-stripe {
   position: relative;
@@ -52,7 +63,108 @@ html {
 .down-stripe:hover {
   text-decoration: none;
   color: white;
-  background: #059627;
+}
+.down-stripe:focus {
+  text-decoration: none;
+  color: white;
+}
+.down-stripe:active {
+  text-decoration: none;
+  color: white;
+}
+.loader-ios {
+  -webkit-animation: iosIntro 0.6s;
+  animation: iosIntro 0.6s;
+  height: 26px;
+}
+.loader-ios svg {
+  fill: rgb(199, 198, 198);
+}
+.loader-ios svg path:nth-of-type(1) {
+  -webkit-animation: pulse 1s infinite linear;
+  animation: pulse 1s infinite linear;
+}
+.loader-ios svg path:nth-of-type(2) {
+  -webkit-animation: pulse 1s -0.083s infinite linear;
+  animation: pulse 1s -0.083s infinite linear;
+}
+.loader-ios svg path:nth-of-type(3) {
+  -webkit-animation: pulse 1s -0.166s infinite linear;
+  animation: pulse 1s -0.166s infinite linear;
+}
+.loader-ios svg path:nth-of-type(4) {
+  -webkit-animation: pulse 1s -0.249s infinite linear;
+  animation: pulse 1s -0.249s infinite linear;
+}
+.loader-ios svg path:nth-of-type(5) {
+  -webkit-animation: pulse 1s -0.332s infinite linear;
+  animation: pulse 1s -0.332s infinite linear;
+}
+.loader-ios svg path:nth-of-type(6) {
+  -webkit-animation: pulse 1s -0.415s infinite linear;
+  animation: pulse 1s -0.415s infinite linear;
+}
+.loader-ios svg path:nth-of-type(7) {
+  -webkit-animation: pulse 1s -0.498s infinite linear;
+  animation: pulse 1s -0.498s infinite linear;
+}
+.loader-ios svg path:nth-of-type(8) {
+  -webkit-animation: pulse 1s -0.581s infinite linear;
+  animation: pulse 1s -0.581s infinite linear;
+}
+.loader-ios svg path:nth-of-type(9) {
+  -webkit-animation: pulse 1s -0.664s infinite linear;
+  animation: pulse 1s -0.664s infinite linear;
+}
+.loader-ios svg path:nth-of-type(10) {
+  -webkit-animation: pulse 1s -0.747s infinite linear;
+  animation: pulse 1s -0.747s infinite linear;
+}
+.loader-ios svg path:nth-of-type(11) {
+  -webkit-animation: pulse 1s -0.83s infinite linear;
+  animation: pulse 1s -0.83s infinite linear;
+}
+.loader-ios svg path:nth-of-type(12) {
+  -webkit-animation: pulse 1s -0.913s infinite linear;
+  animation: pulse 1s -0.913s infinite linear;
+}
+
+@-webkit-keyframes pulse {
+  50% {
+    fill: #f9f7f7;
+  }
+  to {
+    fill: #f9f7f7;
+  }
+}
+
+@keyframes pulse {
+  50% {
+    fill: #f9f7f7;
+  }
+  to {
+    fill: #f9f7f7;
+  }
+}
+@-webkit-keyframes iosIntro {
+  from {
+    transform: scale(0);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+@keyframes iosIntro {
+  from {
+    transform: scale(0);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 .btn-green {
@@ -60,8 +172,16 @@ html {
   border: 0;
 }
 .btn-green:hover {
-  background: #059627;
+  background: #09ce37;
   border: 0;
+}
+.btn-green[disabled] {
+  background: #09ce37;
+  opacity: 1 !important;
+}
+.btn-green[disabled]:hover {
+  background: #09ce37;
+  opacity: 1 !important;
 }
 
 .btn-green:focus {
@@ -94,37 +214,75 @@ html {
 .font-page-content h1 {
   font-size: 28px;
   line-height: 32px;
+  margin-top: 15px;
 }
-.font-page-content input {
+.font-page-content input[type="text"] {
   font-weight: 400;
   background: rgba(255, 255, 255, 0.3);
   border: 0;
   color: white;
-  padding: 21px 13px;
+  padding: 10px 13px;
   padding-left: 125px;
   color: white;
   font-size: 17px;
+  width: 100% !important;
+  text-shadow: 0px 0px 2px #000000;
   letter-spacing: 1px !important;
 }
-.font-page-content input::placeholder {
+.font-page-content input[type="text"]::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: white;
   opacity: 1; /* Firefox */
+  text-shadow: 0px 0px 2px #000000;
 }
 
-.font-page-content input:-ms-input-placeholder {
+.font-page-content input[type="text"]:-ms-input-placeholder {
   /* Internet Explorer 10-11 */
   color: white;
+  text-shadow: 0px 0px 2px #000000;
 }
 
-.font-page-content input::-ms-input-placeholder {
+.font-page-content input[type="text"]::-ms-input-placeholder {
   /* Microsoft Edge */
   color: white;
+  text-shadow: 0px 0px 2px #000000;
+}
+.font-page-content textarea {
+  font-weight: 400;
+  background: rgba(255, 255, 255, 0.3) !important;
+  border: 0;
+  padding: 9px 13px;
+  color: white !important;
+  font-size: 17px;
+  width: 100% !important;
+  letter-spacing: 1px !important;
+  text-shadow: 0px 0px 2px #000000;
+}
+.font-page-content textarea::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: white;
+  opacity: 1; /* Firefox */
+  text-shadow: 0px 0px 2px #000000;
+}
+
+.font-page-content textarea:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: white;
+  text-shadow: 0px 0px 2px #000000;
+}
+
+.font-page-content textarea::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: white;
+  text-shadow: 0px 0px 2px #000000;
 }
 .font-page-content .form-group {
   position: relative;
+  display: block;
+  width: 100%;
+  margin-bottom: 13px;
 }
-.font-page-content .form-group:before {
+.font-page-content .form-group.username:before {
   content: "andflare.com/";
   color: #0fff4b;
   font-size: 18px;
@@ -133,16 +291,27 @@ html {
   left: 11px;
   top: 8px;
 }
+.font-page-content .form-group.email:before {
+  content: "email";
+  color: #0fff4b;
+  font-size: 18px;
+  font-weight: 400;
+  position: absolute;
+  left: 11px;
+  top: 8px;
+}
 
-
+.font-page-content .form-group.email input{
+  padding-left: 62px;
+}
 .font-page-content button {
-    font-weight: 500;
-    text-shadow: 0px 1px 3px rgb(0 0 0 / 42%);
-    font-size: 18px;
-    display: block;
-    width: 100%;
-    border: 0;
-    padding: 12px;
+  font-weight: 500;
+  text-shadow: 0px 1px 3px rgb(0 0 0 / 42%);
+  font-size: 18px;
+  display: block;
+  width: 100%;
+  border: 0;
+  padding: 12px;
 }
 .or {
   position: relative;
@@ -223,10 +392,46 @@ html {
 }
 .front-navigation .nav-items a:hover {
   text-decoration: none;
-  background: #f1f1f1;
+}
+.form-check .form-check-input{
+  float: right;
+}
+.form-check-input:checked {
+  background-color: #409097;
+  border-color: #409097;
+}
+input:focus {
+  box-shadow: none !important;
+  border: 0 !important;
+  outline: 1px solid #409097 !important;
 }
 .front-navigation .nav-items a:last-child {
   border-right: 0;
+}
+.form-switch .form-check-input:focus {
+  background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%280, 0, 0, 0.25%29'/%3e%3c/svg%3e");
+  outline: none !important;
+}
+.price-label{
+  background: #fdce71;
+  color: black;
+  text-shadow: none;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 5.5px 10px;
+  margin-right: 20px;
+  position: relative;
+}
+.price-label:before{
+  content: "";
+  position: absolute;
+  left: 100%;
+  margin-left: -16px;
+  transform: translateY(-50%);
+  border: 16px solid #fdce71;
+  border-color: #fdce71 transparent #fdce71 #fdce71;
+  bottom: -16px;
+  z-index: -1;
 }
 
 .search-form {
@@ -294,10 +499,10 @@ body .search-form input {
   flex-direction: column;
   justify-content: center;
 }
-.trending-title a{
+.trending-title a {
   color: white;
 }
-.trending-title a:hover{
+.trending-title a:hover {
   text-decoration: none;
 }
 .trending-title img {
@@ -464,13 +669,13 @@ body .search-form input {
 .paginator-center .next {
   display: block;
   position: absolute;
-  right: -5px;
+  right: 85px;
   top: -152px;
 }
 .paginator-center .prev {
   display: block;
   position: absolute;
-  left: -5px;
+  left: 90px;
   top: -152px;
 }
 .paginator-center .next:hover {
@@ -496,7 +701,7 @@ body .search-form input {
   height: 33px;
 }
 .dropdown {
-  z-index: 10000;
+  z-index: 1000;
   position: relative;
 }
 .search-form form {
@@ -513,7 +718,7 @@ body .search-form input {
 .dropdown-item {
   width: 100%;
   display: block;
-  padding: 8px 5px;
+  padding: 15px 5px;
   font-weight: 500;
   text-align: center;
   color: black;
@@ -562,7 +767,7 @@ a:focus {
   padding-top: 100px;
 }
 .signup-login .modal-dialog {
-  width: 450px;
+  width: 420px;
 }
 .signup-login .modal-dialog h5 {
   font-size: 18px;
@@ -596,7 +801,8 @@ a:focus {
   background: #f7f7f5;
   padding: 24px 15px;
   font-size: 16px;
-  color: black;
+  color: #595853;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.27);
   margin-bottom: 8px;
 }
 .signup-login .modal-body small {
@@ -624,9 +830,11 @@ a:focus {
 }
 .signup-login .modal-footer {
   position: relative;
+  padding: 0;
 }
 .signup-login .modal-footer a {
   display: flex;
+  padding: 15px;
   width: 100%;
   align-items: center;
   text-align: center;
@@ -634,7 +842,6 @@ a:focus {
   font-size: 18px;
   font-weight: 500;
   color: black;
-  margin-top: 5px;
 }
 .signup-login .modal-footer a img {
   margin-left: 5px;
@@ -645,18 +852,21 @@ a:focus {
 }
 .signup-login .modal-body .form-control::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: black;
+  color: #595853;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.27);
   opacity: 1; /* Firefox */
 }
 
 .signup-login .modal-body .form-control:-ms-input-placeholder {
   /* Internet Explorer 10-11 */
-  color: black;
+  color: #595853;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.27);
 }
 
 .signup-login .modal-body .form-control::-ms-input-placeholder {
   /* Microsoft Edge */
-  color: black;
+  color: #595853;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.27);
 }
 .signup-login .modal-body button {
   font-weight: 400;
@@ -899,29 +1109,29 @@ body {
   border-color: transparent #fedd01 transparent transparent;
   bottom: -4px;
 }
-.middle-content{
+.middle-content {
   text-align: center;
   position: absolute;
   width: 100%;
   top: 150px;
 }
-.middle-content h1{
+.middle-content h1 {
   color: white;
-    width: 38%;
-    margin: 0 auto;
-    margin-bottom: 40px;
-    text-shadow: 1px 2px 4px rgb(0 0 0 / 42%);
-    font-size: 40px;
-    line-height: 51px;
+  width: 38%;
+  margin: 0 auto;
+  margin-bottom: 40px;
+  text-shadow: 1px 2px 4px rgb(0 0 0 / 42%);
+  font-size: 40px;
+  line-height: 51px;
 }
-.navigation-page .search-bar{
+.navigation-page .search-bar {
   display: none;
 }
-.navigation-page.show-bar .search-bar{
+.navigation-page.show-bar .search-bar {
   display: inline-block;
   margin-left: 20px;
 }
-.fixed-nav{
+.fixed-nav {
   top: 0;
   position: fixed !important;
   background: #4e1bf4;
@@ -929,33 +1139,33 @@ body {
   padding: 5px 94px;
   z-index: 9999;
 }
-.search-form{
+.search-form {
   margin: 0;
-    padding: 0;
+  padding: 0;
 }
-.search-form input{
-  font-weight: 400  !important;
+.search-form input {
+  font-weight: 400 !important;
   background: rgba(255, 255, 255, 0.3) !important;
-  padding: 10px 13px  !important;
-  color: white  !important;
-  font-size: 16px  !important;
-  letter-spacing: 1px  !important;
-  border: 0  !important;
-  border-top-right-radius: 3px !important;;
-  border-bottom-right-radius: 3px !important;;
+  padding: 10px 13px !important;
+  color: white !important;
+  font-size: 16px !important;
+  letter-spacing: 1px !important;
+  border: 0 !important;
+  border-top-right-radius: 3px !important;
+  border-bottom-right-radius: 3px !important;
 }
-.search-form input.typeahead__hint{
- background: transparent !important;
+.search-form input.typeahead__hint {
+  background: transparent !important;
 }
 .search-form .typeahead__search-icon {
   padding: 10px;
   width: 16px;
   height: 16px;
-  background: url('../img/search-white.svg') no-repeat scroll center center;
+  background: url("../img/search-white.svg") no-repeat scroll center center;
   color: white;
   background-color: none !important;
 }
-.search-form .typeahead__button button{
+.search-form .typeahead__button button {
   background: transparent !important;
   color: white;
   border: 0;
@@ -964,39 +1174,65 @@ body {
   height: 100%;
   padding-left: 13px;
 }
-.search-form .typeahead__button button{
+.search-form .typeahead__button button {
   margin-right: -40px;
 }
-.typeahead__container *{
+.typeahead__container * {
   font-size: 18px;
 }
-.front-navigation .typeahead__container{
+.front-navigation .typeahead__container {
   width: 500px;
 }
 .typeahead__group[data-search-group="general"] {
   display: none !important;
 }
-.typeahead__list>.typeahead__group.active>a, .typeahead__list>.typeahead__group>a, .typeahead__list>.typeahead__group>a:focus, .typeahead__list>.typeahead__group>a:hover {
-
+.typeahead__list > .typeahead__group.active > a,
+.typeahead__list > .typeahead__group > a,
+.typeahead__list > .typeahead__group > a:focus,
+.typeahead__list > .typeahead__group > a:hover {
   background: #ededed !important;
   font-weight: 400 !important;
   color: #555555 !important;
   font-size: 18px !important;
 }
-.typeahead__list>li {
+.typeahead__list > li {
   position: relative;
   border-top: 0 !important;
 }
-.search-banner .typeahead__container{
+.search-banner .typeahead__container {
   width: 500px;
 }
-.search-banner .middle-form{
+.search-banner .middle-form {
   justify-content: center;
 }
-input:focus{
+input:focus {
   box-shadow: none !important;
   border: 0 !important;
   outline: 1px solid #3744e1 !important;
+}
+.dropdown-menu {
+  min-width: 220px;
+}
+.font-page-content a {
+  color: white !important;
+}
+.font-page-content a:hover {
+  text-decoration: none;
+}
+.font-page-content h2 {
+  font-size: 27px;
+  line-height: 34px;
+  margin-top: 20px;
+}
+.font-page-content .form-switch{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-left: 0;
+  text-align: left;
+  font-size: 20px;
+}
+a{
+  text-decoration: none !important;
 }
 @media only screen and (max-width: 1024px) {
   .search-form .from-group {
@@ -1006,22 +1242,28 @@ input:focus{
     margin-top: 10px;
     margin-right: 13%;
   }
+  .paginator-center .next {
+    right: 55px;
+  }
+  .paginator-center .prev {
+    left: 60px;
+  }
 }
 @media only screen and (max-width: 768px) {
-  .front-navigation .typeahead__container{
+  .front-navigation .typeahead__container {
     width: 100%;
   }
-  .search-banner .typeahead__container{
+  .search-banner .typeahead__container {
     width: 100%;
   }
   .main-page {
     padding: 20px 20px;
   }
   .paginator-center .next {
-    right: -5px;
+    right: 45px;
   }
   .paginator-center .prev {
-    left: -5px;
+    left: 50px;
   }
   .front-page {
     display: block;
@@ -1036,6 +1278,7 @@ input:focus{
     padding-right: 15px;
     position: relative;
   }
+
   .search-form .from-group {
     width: 100%;
   }
