--- a/andflare/css/main.css
+++ b/andflare/css/main.css
@@ -19,11 +19,11 @@ html {
   flex-wrap: wrap;
   padding-bottom: 30px;
 }
-.front-page.scroll{
+.front-page.scroll {
   height: 100%;
   padding-bottom: 80px;
 }
-.front-page.scroll .font-page-content{
+.front-page.scroll .font-page-content {
   padding-top: 40px;
 }
 .front-page::before {
@@ -53,7 +53,6 @@ html {
 .scroll .down-stripe {
   position: absolute;
   bottom: 0;
-
 }
 .relative.down-stripe {
   position: relative;
@@ -170,7 +169,12 @@ html {
 .btn-green {
   background: #09ce37;
   border: 0;
+  display: block;
+  padding: 12px;
+  font-size: 18px;
+  position: relative;
 }
+
 .btn-green:hover {
   background: #09ce37;
   border: 0;
@@ -185,22 +189,27 @@ html {
 }
 
 .btn-green:focus {
-  background: #059627;
-  border: 0;
-  outline: none;
-}
-.btn-green:active {
-  background: #059627;
+  background: #09ce37;
   border: 0;
   outline: none;
 }
 .btn-green:focus:hover {
-  background: #059627;
+  background: #09ce37;
+  border: 0;
+  outline: none;
+}
+.btn-green:active {
+  background: #09ce37;
+  border: 0;
+  outline: none;
+}
+.btn-green:focus:hover {
+  background: #09ce37;
   border: 0;
   outline: none;
 }
 .btn-green:focus:active {
-  background: #059627;
+  background: #09ce37;
   border: 0;
   outline: none;
 }
@@ -301,7 +310,7 @@ html {
   top: 8px;
 }
 
-.font-page-content .form-group.email input{
+.font-page-content .form-group.email input {
   padding-left: 62px;
 }
 .font-page-content button {
@@ -393,7 +402,7 @@ html {
 .front-navigation .nav-items a:hover {
   text-decoration: none;
 }
-.form-check .form-check-input{
+.form-check .form-check-input {
   float: right;
 }
 .form-check-input:checked {
@@ -409,20 +418,26 @@ input:focus {
   border-right: 0;
 }
 .form-switch .form-check-input:focus {
-  background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%280, 0, 0, 0.25%29'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%280, 0, 0, 0.25%29'/%3e%3c/svg%3e");
   outline: none !important;
 }
-.price-label{
+.price-label {
   background: #fdce71;
   color: black;
   text-shadow: none;
-  font-size: 18px;
+  font-size: 18px !important;
   font-weight: bold;
   padding: 5.5px 10px;
   margin-right: 20px;
   position: relative;
+  height: 32px;
+  line-height: 22px;
 }
-.price-label:before{
+.price-label span {
+  z-index: 10;
+  position: relative;
+}
+.price-label:before {
   content: "";
   position: absolute;
   left: 100%;
@@ -431,7 +446,7 @@ input:focus {
   border: 16px solid #fdce71;
   border-color: #fdce71 transparent #fdce71 #fdce71;
   bottom: -16px;
-  z-index: -1;
+  z-index: 1;
 }
 
 .search-form {
@@ -692,13 +707,14 @@ body .search-form input {
 .search-form .dropdown button {
   background: none;
   color: rgb(255 255 255 / 76%);
-  font-size: 40px;
+  font-size: 49px;
   padding: 0;
-  line-height: 20px;
+  line-height: 18px;
   outline: none;
   border: 0;
   box-shadow: none;
-  height: 33px;
+  height: 18px;
+  margin-top: -11px;
 }
 .dropdown {
   z-index: 1000;
@@ -786,8 +802,8 @@ a:focus {
   border-radius: 5px;
 }
 .signup-login .modal-body {
-  padding: 80px 50px;
-  padding-bottom: 60px;
+  padding: 45px 40px;
+  padding-bottom: 40px;
 }
 .signup-login .modal-body span {
   color: #b5b4b2;
@@ -799,7 +815,7 @@ a:focus {
 }
 .signup-login .modal-body .form-control {
   background: #f7f7f5;
-  padding: 24px 15px;
+  padding: 11px 15px;
   font-size: 16px;
   color: #595853;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.27);
@@ -810,6 +826,7 @@ a:focus {
   font-size: 14px;
   display: flex;
   align-items: center;
+  margin-bottom: 10px;
 }
 .signup-login .modal-body small img {
   margin-right: 5px;
@@ -831,6 +848,9 @@ a:focus {
 .signup-login .modal-footer {
   position: relative;
   padding: 0;
+  -webkit-box-shadow: 0px 2px 6px 1px rgb(0 0 0 / 16%);
+  -moz-box-shadow: 0px 2px 6px 1px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 2px 6px 1px rgb(0 0 0 / 16%);
 }
 .signup-login .modal-footer a {
   display: flex;
@@ -903,7 +923,26 @@ a:focus {
   border-color: #7360df transparent transparent transparent;
   bottom: -28px;
 }
-
+a .tooltip-static {
+  background: #7360e0;
+  color: white;
+  position: absolute;
+  top: -45px;
+  z-index: 1000;
+  left: 0;
+  right: 0;
+  width: 72px;
+  text-align: center;
+  padding: 5px 9px;
+  display: inline-block;
+  border-radius: 8px;
+  margin: 0 auto;
+  padding-bottom: 7px;
+  font-size: 14px;
+}
+a .tooltip-static::before {
+  margin-left: -45px;
+}
 .main-page {
   padding: 40px 80px;
 }
@@ -1050,13 +1089,103 @@ body {
   font-size: 29px;
   padding: 0;
   line-height: 28px;
+  border: 0;
+  color: black;
 }
 
 .card-head .dropdown button:focus {
   outline: none;
+  border: 0;
+  color: black;
+  box-shadow: none;
+}
+.card-head .dropdown button:active:focus {
+  outline: none;
+  border: 0;
+  color: black;
+  box-shadow: none;
 }
 .card-head .dropdown button:active {
   outline: none;
+  border: 0;
+  color: black;
+  box-shadow: none;
+}
+.card-line img {
+  margin-right: 15px;
+  border-radius: 5px;
+  width: 45px;
+}
+.card-line .dropdown {
+  display: inline-block;
+  float: right;
+  background: none;
+  margin-left: 10px;
+}
+
+.card-line .dropdown button {
+  background: none;
+  font-size: 29px;
+  padding: 0;
+  line-height: 28px;
+  border: 0;
+  color: black;
+}
+.card-line {
+  display: flex;
+  background: #e9e9e9;
+  border-radius: 4px;
+  align-items: center;
+  padding: 10px 18px;
+  margin-bottom: 20px;
+}
+.card-line h4 {
+  flex: 1;
+  margin-bottom: 0;
+  font-size: 20px;
+  font-weight: 600;
+  min-height: 45px;
+  padding-top: 11px;
+}
+.flex-1 {
+  flex: 1;
+}
+.list-group-item {
+  border: 0;
+}
+.list-group .list-group-item {
+  background: #e9e9e9;
+}
+.list-group .list-group-item:nth-child(2n) {
+  background: #d6d6d6;
+}
+.card-line h4 a {
+  color: #000;
+  display: block;
+  width: 100%;
+}
+.card-line h4 label.red {
+  color: #db7f83;
+  background: none;
+  border: 0;
+}
+.card-line .dropdown button:focus {
+  outline: none;
+  border: 0;
+  color: black;
+  box-shadow: none;
+}
+.card-line .dropdown button:active:focus {
+  outline: none;
+  border: 0;
+  color: black;
+  box-shadow: none;
+}
+.card-line .dropdown button:active {
+  outline: none;
+  border: 0;
+  color: black;
+  box-shadow: none;
 }
 
 .card-footer {
@@ -1081,6 +1210,8 @@ body {
 .notification {
   margin-left: 15px;
   min-width: 220px;
+  display: flex;
+  align-items: center;
 }
 .notification label {
   background: #65ff39;
@@ -1089,25 +1220,55 @@ body {
   font-weight: bold;
   color: #4c1bed;
 }
+.notification strong {
+  font-size: 64px;
+}
 .notification .tooltip-static {
   background: #fedd01;
   color: #373c45;
   font-weight: bold;
-  width: 150px;
+  width: 170px;
   position: relative;
   margin-left: 20px;
   top: 0;
   border-radius: 4px;
+  text-shadow: none;
 }
 .notification .tooltip-static::before {
   content: "";
   position: absolute;
   left: 100%;
-  margin-left: -169px;
+  margin-left: -189px;
   transform: translateY(-50%);
   border: 10px solid #fedd01;
   border-color: transparent #fedd01 transparent transparent;
   bottom: -4px;
+}
+.buy-caffe {
+  margin-left: 50px;
+}
+.pannel-radio-button {
+  background: white;
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  border-radius: 4px;
+  text-align: left;
+}
+.pannel-radio-button .form-check {
+  flex: 1;
+  padding: 10px;
+  border-right: 1px solid #cfcfcf;
+  padding-left: 50px;
+  text-shadow: none;
+}
+.pannel-radio-button .form-check:last-child{
+  border: 0;
+}
+.pannel-radio-button .form-check-input {
+  float: left;
 }
 .middle-content {
   text-align: center;
@@ -1223,16 +1384,78 @@ input:focus {
   font-size: 27px;
   line-height: 34px;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
-.font-page-content .form-switch{
+.font-page-content .form-switch {
   margin-top: 20px;
   margin-bottom: 20px;
   padding-left: 0;
   text-align: left;
   font-size: 20px;
 }
-a{
+a {
   text-decoration: none !important;
+}
+.big-profile-image img {
+  width: 150px;
+  border-radius: 12px;
+}
+.big-profile-image {
+  position: absolute;
+  left: 14%;
+  bottom: 16px;
+  z-index: 10000;
+  padding: 8px;
+  background: rgb(255 255 255 / 50%);
+  border-radius: 12px;
+}
+.page-content {
+  margin-top: 50px;
+}
+.text-intro {
+  font-size: 26px;
+}
+.modal-body .form-check .form-check-input {
+  float: left;
+}
+.modal-body .form-check {
+  margin-bottom: 8px;
+}
+.flex {
+  display: flex;
+  align-items: center;
+}
+.form-check label small {
+  margin-bottom: 0 !important;
+  padding-left: 12px;
+}
+.form-check label p {
+  margin-bottom: 0 !important;
+}
+.form-check label p label {
+  font-size: 18px;
+  font-weight: 600;
+  color: #8f8f8f;
+}
+.creadit-card-fields {
+  display: none;
+}
+.creadit-card-fields {
+  margin-top: 15px;
+}
+
+.creadit-card-fields input {
+  padding: 10px 5px !important;
+  width: 36px !important;
+  text-align: center;
+}
+.creadit-card-fields input:first-child {
+  width: 130px !important;
+  text-align: left;
+  padding-left: 15px !important;
+}
+.modal-open .modal {
+  z-index: 999999999;
 }
 @media only screen and (max-width: 1024px) {
   .search-form .from-group {
@@ -1315,7 +1538,7 @@ a{
     margin: 0 auto;
   }
   .signup-login .modal-body {
-    padding: 41px 21px;
-    padding-bottom: 60px;
+    padding: 45px 40px;
+    padding-bottom: 40px;
   }
 }
