--- a/andflare/css/main.css
+++ b/andflare/css/main.css
@@ -1368,7 +1368,7 @@ body {
 }
 input:focus {
   box-shadow: none !important;
-  border: 0 !important;
+  border: 1px solid #3744e1 !important;
   outline: 1px solid #3744e1 !important;
 }
 .dropdown-menu {
